<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvStorageNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_number" />

    <TextView
        android:id="@+id/tvRentalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rental_time" />

    <TextView
        android:id="@+id/tvClusterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cluster_name" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" />
</LinearLayout>