<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvClusterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvClusterCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvClusterType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvClusterWorkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"

        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none" />

    <Button
        android:id="@+id/btnRentStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rent_storage" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_storages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:background="#f0f0f0"/>
</LinearLayout>